--- a/backend/package.json
+++ b/backend/package.json
@@ -20,9 +20,11 @@
     "@koa/cors": "^4.0.0",
     "@koa/router": "^12.0.0",
     "@prisma/client": "^4.12.0",
+    "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "graphql": "^16.6.0",
     "graphql-relay": "^0.10.0",
+    "jsonwebtoken": "^9.0.0",
     "koa": "^2.14.2",
     "koa-graphql": "^0.12.0",
     "prisma": "^4.12.0",
@@ -30,6 +32,8 @@
     "tscpaths": "^0.0.9"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/koa": "^2.13.6",
     "@types/koa__cors": "^4.0.0",
     "@types/koa__router": "^12.0.0",
