--- a/backend/package.json
+++ b/backend/package.json
@@ -7,8 +7,8 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "start": "node -r ts-node/register -r tsconfig-paths/register dist/server.js",
-    "dev": "tsnd --respawn --transpile-only --exit-child -r tsconfig-paths/register src/server.ts",
+    "start": "node -r ts-node/register -r tsconfig-paths/register dist/Server.js",
+    "dev": "tsnd --respawn --transpile-only --exit-child -r tsconfig-paths/register src/Server.ts",
     "build": "tsc --project tsconfig.json&&tscpaths -p tsconfig.json -s src -o dist",
     "lint": "eslint src --ext ts --max-warnings=0",
     "lint:fix": "eslint src --ext ts --max-warnings=0 --fix",
@@ -17,16 +17,12 @@
     "typecheck": "tsc --project tsconfig.json --noEmit"
   },
   "dependencies": {
-    "@koa/cors": "^4.0.0",
-    "@koa/router": "^12.0.0",
     "@prisma/client": "^4.12.0",
     "bcrypt": "^5.1.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "graphql": "^16.6.0",
-    "graphql-relay": "^0.10.0",
+    "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
-    "koa": "^2.14.2",
-    "koa-graphql": "^0.12.0",
     "prisma": "^4.12.0",
     "tsconfig-paths": "^4.2.0",
     "tscpaths": "^0.0.9",
@@ -34,10 +30,9 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.1",
-    "@types/koa": "^2.13.6",
-    "@types/koa__cors": "^4.0.0",
-    "@types/koa__router": "^12.0.0",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
     "eslint": "^8.38.0",
