Refactor: Web app - code structure, layout, etc

--- a/web/.gitignore
+++ b/web/.gitignore
@@ -4,6 +4,7 @@
 /node_modules
 /.pnp
 .pnp.js
+.yarn/install-state.gz
 
 # testing
 /coverage
@@ -17,7 +18,6 @@
 
 # misc
 .DS_Store
-.vscode
 *.pem
 
 # debug
