Feat: CI and migrate database workflows added

--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -38,10 +38,11 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    ".next/types/**/*.ts",
     "build/types/**/*.ts"
   ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    ".next",
+    "build"
   ]
 }
