--- a/.github/workflows/migrate.yaml
+++ b/.github/workflows/migrate.yaml
@@ -13,14 +13,12 @@ jobs:
         uses: actions/checkout@v3
       - name: Node setup
         uses: actions/setup-node@v3
-      - name: Change directory to backend
-        run: cd backend
-      - name: Install
-        run: npm install
+      - name: Install dependencies
+        run: cd backend && npm install
       - name: Build
-        run: npm run build
+        run: cd backend && npm run build
       - name: Prisma migration
-        run: npx prisma migrate deploy
+        run: cd backend && npx prisma migrate deploy
         env:
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
           DIRECT_URL: ${{ secrets.DIRECT_URL }}
