--- a/.github/workflows/migrate.yaml
+++ b/.github/workflows/migrate.yaml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/setup-node@v3
       - name: Change directory to backend
         run: cd backend
-      - name: Install
+      - name: Install dependencies
         run: npm install
       - name: Build
         run: npm run build
