--- a/web/package.json
+++ b/web/package.json
@@ -30,10 +30,11 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "lucide-react": "^0.336.0",
-    "next": "14.0.4",
+    "next": "14.2.3",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-error-boundary": "^4.0.13",
     "react-hook-form": "^7.49.3",
     "react-icons": "^5.0.1",
     "sonner": "^1.4.2",
