Feat: Pages, components, and general code improvements

--- a/web/package.json
+++ b/web/package.json
@@ -31,11 +31,12 @@
     "clsx": "^2.1.0",
     "lucide-react": "^0.336.0",
     "next": "14.2.3",
+    "next-pwa": "^5.6.0",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-error-boundary": "^4.0.13",
-    "react-hook-form": "^7.49.3",
+    "react-hook-form": "^7.51.4",
     "react-icons": "^5.0.1",
     "sonner": "^1.4.2",
     "tailwind-merge": "^2.2.0",
