--- a/backend/package.json
+++ b/backend/package.json
@@ -9,9 +9,9 @@
   "scripts": {
     "start": "node -r ts-node/register -r tsconfig-paths/register dist/Server.js",
     "dev": "tsnd --respawn --transpile-only --exit-child -r tsconfig-paths/register src/Server.ts",
-    "build": "tsc --project tsconfig.json&&tscpaths -p tsconfig.json -s src -o dist",
-    "lint": "eslint src --ext ts --max-warnings=0",
-    "lint:fix": "eslint src --ext ts --max-warnings=0 --fix",
+    "build": "prisma generate&&tsc --project tsconfig.json&&tscpaths -p tsconfig.json -s src -o dist",
+    "lint": "eslint --max-warnings=0",
+    "lint:fix": "eslint --max-warnings=0 --fix",
     "prettier": "prettier --check \"src/**/*.ts\"",
     "prettier:fix": "prettier --check \"src/**/*.ts\" --write",
     "typecheck": "tsc --project tsconfig.json --noEmit"
@@ -33,14 +33,14 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
-    "@typescript-eslint/eslint-plugin": "^5.62.0",
-    "@typescript-eslint/parser": "^5.62.0",
+    "@typescript-eslint/eslint-plugin": "^7.9.0",
+    "@typescript-eslint/parser": "^7.9.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^8.10.0",
     "eslint-plugin-import-helpers": "^1.3.1",
     "eslint-plugin-prettier": "^4.2.1",
     "prettier": "^2.8.8",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.4.5"
   }
 }
