--- a/web/package.json
+++ b/web/package.json
@@ -27,9 +27,11 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@tanstack/react-query": "^5.24.1",
+    "@types/lodash.isequal": "^4.5.8",
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "lodash.isequal": "^4.5.0",
     "lucide-react": "^0.336.0",
     "next": "14.2.3",
     "next-nprogress-bar": "^2.3.12",
