--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -4,3 +4,9 @@ steps:
 
   - name: "gcr.io/cloud-builders/docker"
     args: ["push", "gcr.io/$PROJECT_ID/backend:$COMMIT_SHA"]
+
+  - name: "gcr.io/cloud-builders/docker"
+    args: ["build", "-t", "gcr.io/$PROJECT_ID/web:$COMMIT_SHA", "web"]
+
+  - name: "gcr.io/cloud-builders/docker"
+    args: ["push", "gcr.io/$PROJECT_ID/web:$COMMIT_SHA"]
