--- a/web/public/manifest.json
+++ b/web/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "theme_color": "#FFF",
-  "background_color": "#FFF",
+  "theme_color": "#FFFFFF",
+  "background_color": "#FFFFFF",
   "display": "standalone",
   "scope": "/",
   "start_url": "/",
@@ -8,25 +8,25 @@
   "short_name": "EX3",
   "description": "EX3 Progressive Web App (PWA)",
   "icons": [
-      {
-          "src": "/favicon.png",
-          "sizes": "192x192",
-          "type": "image/png"
-      },
-      {
-          "src": "/favicon.png",
-          "sizes": "256x256",
-          "type": "image/png"
-      },
-      {
-          "src": "/favicon.png",
-          "sizes": "384x384",
-          "type": "image/png"
-      },
-      {
-          "src": "/favicon.png",
-          "sizes": "512x512",
-          "type": "image/png"
-      }
+    {
+      "src": "/favicon.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "/favicon.png",
+      "sizes": "256x256",
+      "type": "image/png"
+    },
+    {
+      "src": "/favicon.png",
+      "sizes": "384x384",
+      "type": "image/png"
+    },
+    {
+      "src": "/favicon.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
   ]
 }
