--- a/web/package.json
+++ b/web/package.json
@@ -40,7 +40,7 @@
     "clsx": "^2.1.0",
     "lodash.isequal": "^4.5.0",
     "lucide-react": "^0.336.0",
-    "next": "14.2.3",
+    "next": "^14.2.24",
     "next-nprogress-bar": "^2.3.12",
     "next-pwa": "^5.6.0",
     "next-themes": "^0.3.0",
